# Sudoku-Solver

./: .gitignore  CMakeLists.txt  README.md  assignment.ad  main.c  sudoku.c
